--- a/css/micss.css
+++ b/css/micss.css
@@ -164,7 +164,7 @@ body {
 @media only screen and (max-width: 768px){
 
 .flexBox{
-  display: unset;
+  display: table-cell;
 }
 .header{
   padding-inline: 5%;
